Move CodePen script include into partial

--- a/source/blog/kerning-and-ligatures-in-letterspaced-type.md.erb
+++ b/source/blog/kerning-and-ligatures-in-letterspaced-type.md.erb
@@ -2,6 +2,7 @@
 title: Kerning & Ligatures in Letterspaced Type
 type: post
 layout: article
+codepen: true
 date: 2015-09-01
 description: "Letterspacing affects type's horizontal rhythm, and so do kerning and ligatures. Combining all three of them can make for beautifully spaced typography."
 ---
@@ -67,8 +68,6 @@ And that's it!
 Before we wrap up, I have to give a shout-out to [Bram Stein][twitter-bram] for his work on [The State of Web Type][state-of-web-type]. That site has been a _huge_ help for me in figuring out an approach that works across browsers.
 
 If you have any questions about letterspacing on the web &mdash; or if you just want to chat about web typography &mdash; send me a message over on [Twitter][twitter].
-
-<script async src="//assets.codepen.io/assets/embed/ei.js"></script>
 
 [codepen-demo]: http://codepen.io/johndjameson/pen/e96a930f0a73dd36f9ff173422b48523?editors=110
 [guidelines]: guidelines-for-letterspacing-type.html
