--- a/source/blog/guidelines-for-letterspacing-type.md.erb
+++ b/source/blog/guidelines-for-letterspacing-type.md.erb
@@ -2,6 +2,7 @@
 title: Guidelines for Letterspacing Type
 type: post
 layout: article
+codepen: true
 date: 2015-08-18
 description: "Blog posts on line height and vertical rhythm are all so boring. Let's get horizontal, instead."
 ---
@@ -62,8 +63,6 @@ There's always more to learn
 This article just _scratches the surface_ of letterspacing type on the web. Once you start combining different elements of typography, you'll run into situations where its best to work _outside_ these guidelines. For example, how does type set in italics respond to letterspacing? And in what situations does wordspacing come into play?
 
 I'm still figuring out the answers to those questions myself, but if you'd like to start a conversation about web typography, hit me up on [Twitter][twitter].
-
-<script async src="//assets.codepen.io/assets/embed/ei.js"></script>
 
 [carolina]: https://www.youtube.com/watch?v=VpBslige5Yk&feature=youtu.be&t=1130
 [twitter]: https://twitter.com/johndjameson
