Update MSoCH link

--- a/source/blog/making-sense-of-ch-units.md.erb
+++ b/source/blog/making-sense-of-ch-units.md.erb
@@ -43,4 +43,4 @@ Send me a message on [Twitter][twitter] if you have any questions or feedback â€
 
 [specification]: http://www.w3.org/TR/css3-values/#font-relative-lengths
 [twitter]: https://twitter.com/johndjameson
-[typographic-units]: /blog/typographic-units-in-css.html#ch-units
+[typographic-units]: /blog/typographic-units-in-css.html
