--- a/source/assets/stylesheets/foundation/_base.sass
+++ b/source/assets/stylesheets/foundation/_base.sass
@@ -51,10 +51,12 @@ h1, .h1
   letter-spacing: -0.025em
   line-height: 1
   margin-bottom: $b-space-s
+  margin-left: -0.025em
   word-spacing: -0.03em
 
   +respond-to($g-l)
     margin-bottom: $b-space
+    margin-left: -0.0375em
 
 h2, .h2
   +font-size(( b: $b-fontSize-h2, m: $b-fontSize-h2-b ))
