Add Article image styles

--- a/source/assets/stylesheets/structures/_article.sass
+++ b/source/assets/stylesheets/structures/_article.sass
@@ -42,6 +42,10 @@
   iframe
     margin-bottom: $b-space
 
+  img
+    display: block
+    margin: 0 auto
+
   // -------------------------------------
   //   Inline Content
   // -------------------------------------
