Add CodePen helper

--- a/source/blog/sidebearings-and-alignment.md.erb
+++ b/source/blog/sidebearings-and-alignment.md.erb
@@ -16,7 +16,7 @@ So how can sidebearings cause problems with alignment?
 
 In left-aligned type, each line's first glyph begins at the same point, but because of their sidebearings, the actual _characters_ don't. This causes large type to look indented — especially when set above or below smaller type.
 
-<%= partial 'shared/codepen', locals: { pen: '43118a0bceea2de380f87402ff75f3c8', height: 630 } %>
+<%= codepen '43118a0bceea2de380f87402ff75f3c8', 630 %>
 
 In the example above, you can see that the larger the font size is, the more indented the type appears.
 
