Update posts to use Codepen helper

--- a/source/blog/sidebearings-and-alignment.md.erb
+++ b/source/blog/sidebearings-and-alignment.md.erb
@@ -27,7 +27,7 @@ Accounting for sidebearings in left-aligned type is pretty straightforward in CS
 
 Depending on the typeface and font size, the value you'll need can differ wildly, so try out several values to see what works best. I've found that they usually fall within the -0.02em to -0.1em range.
 
-<%= partial 'shared/codepen', locals: { pen: '17300c1454dcfc16c02cc3fba9546333', height: 630 } %>
+<%= codepen '17300c1454dcfc16c02cc3fba9546333', 630 %>
 
 And there you have it: the type now looks properly aligned, thanks to a few negative margins.
 
