--- a/source/blog/guidelines-for-letterspacing-type.md.erb
+++ b/source/blog/guidelines-for-letterspacing-type.md.erb
@@ -18,7 +18,7 @@ When setting type in all uppercase, it's almost always a good idea to increase t
 
 This usually involves setting a `letter-spacing` value around 0.2–0.25 ems for headings and a value around 0.05–0.1 ems for acronyms.
 
-<%= partial 'shared/codepen', locals: { pen: 'QbRayd', height: 200 } %>
+<%= codepen 'QbRayd', 200 %>
 
 In this example, "HTML" and "CSS" are set in _small caps_, but the same advice applies here, too.
 
@@ -33,7 +33,7 @@ In more practical terms, here's what that relationship looks like:
 - Body text should have default tracking, or stick very close to default letterspacing.
 - Very small text should have increased letterspacing.
 
-<%= partial 'shared/codepen', locals: { pen: 'aa39c703c30de9f1b65a3c738ad344c2', height: 435 } %>
+<%= codepen 'aa39c703c30de9f1b65a3c738ad344c2', 435 %>
 
 Font weight
 -----------
@@ -42,7 +42,7 @@ Like with font size, the relationship between font weight and letterspacing foll
 
 This is because of the way typefaces at look and feel at certain weights. Light typefaces have an airy aesthetic that's complemented by open letterspacing, while bold typefaces have a dark and heavy aesthetic that's complemented by pulling the letters _closer together_.
 
-<%= partial 'shared/codepen', locals: { pen: 'ba2516c0e03124d5afe2d7f0eefec5fd', height: 350 } %>
+<%= codepen 'ba2516c0e03124d5afe2d7f0eefec5fd', 350 %>
 
 For a more in-depth explanation on how weight affects letterspacing decisions, check out Carolina de Bartolo's _Typography Matters_ talk over on [YouTube][carolina].
 
@@ -53,7 +53,7 @@ Light type set on a dark background usually benefits from a small increase in le
 
 If you look at the following example, you'll notice that the white-on-black text appears _bolder_ than the black-on-white text. They're the exact same size and weight, but the white-on-black text still looks a little bit thicker. To compensate for that difference, you'll need to make a subtle increase in letterspacing.
 
-<%= partial 'shared/codepen', locals: { pen: 'qdGyJY', height: 228 } %>
+<%= codepen 'qdGyJY', 228 %>
 
 CSS supports `letter-spacing` values in quarter-pixel increments, so I'm able to specify `0.5px` in this example. When setting type at a small size, you'll often find comfortable letterspacing somewhere _in between_ whole pixel values.
 
