Replace fixOrphanWords with prevent_widow helper
This avoids text reflow caused by replacing spaces with non-breaking spaces.

--- a/source/about.haml
+++ b/source/about.haml
@@ -1,7 +1,7 @@
 %section.row.mbm--m
   .cell.well.well--l
 
-    %h1.js-orphan Questions & Answers
+    %h1= prevent_widow('Questions & Answers')
 
     .article
       :markdown
