Update Guidelines copy

--- a/source/blog/2015-08-18-guidelines-for-letterspacing-type.md.erb
+++ b/source/blog/2015-08-18-guidelines-for-letterspacing-type.md.erb
@@ -14,7 +14,7 @@ Effectively letterspacing text can make the difference between good typography a
 Capital letters
 ---------------
 
-When setting type in all uppercase, it's almost always a good idea to increase the text's letterspacing from its default value. The spacing built into most fonts isn't intended for use with uppercase text, so that means you'll need to loosen tracking manually via CSS.
+It's almost always a good idea to increase letterspacing with uppercase type. Default spacing between uppercase letters is designed to be the _minimum_ necessary, so you'll usually want to add a little more breathing room between the characters.
 
 This usually involves setting a `letter-spacing` value around 0.2–0.25 ems for headings and a value around 0.05–0.1 ems for acronyms.
 
