Update CodePen embeds in posts

--- a/source/blog/2015-08-05-typographic-units-in-css.md.erb
+++ b/source/blog/2015-08-05-typographic-units-in-css.md.erb
@@ -24,7 +24,7 @@ To illustrate this, if Helvetica Neue is set at a font size of `100px`, then you
 
 Using `ex` units in CSS is just like using any other units. You're able to write them with any CSS property you'd use with pixels or `em` units.
 
-<%= codepen 'd81ece0b6a9436654dd4777a73634005', 270 %>
+<%= codepen({ pen: 'd81ece0b6a9436654dd4777a73634005', height: 270 })%>
 
 Ch units
 --------
@@ -41,7 +41,7 @@ With this constraint in mind, here are some of the use cases where I've found `c
 
 In the following example, I'm able to declare `max-width: 75ch` on the paragraph element, ensuring [ideal line length][csstricks-45-75] as the user's viewport widens.
 
-<%= codepen 'fbfae4fd58d5356f6b95683fb219aa38', 257 %>
+<%= codepen({ pen: 'fbfae4fd58d5356f6b95683fb219aa38', height: 261 })%>
 
 Takeaways
 ---------
