--- a/source/blog/2015-09-30-sidebearings-and-alignment.md.erb
+++ b/source/blog/2015-09-30-sidebearings-and-alignment.md.erb
@@ -16,7 +16,7 @@ So how can sidebearings cause problems with alignment?
 
 In left-aligned type, each line's first glyph begins at the same point, but because of their sidebearings, the actual _characters_ don't. This causes large type to look indented — especially when set above or below smaller type.
 
-<%= codepen '43118a0bceea2de380f87402ff75f3c8', 630 %>
+<%= codepen({ pen: '43118a0bceea2de380f87402ff75f3c8', height: 630 }) %>
 
 In the example above, you can see that the larger the font size is, the more indented the type appears.
 
@@ -27,7 +27,7 @@ Accounting for sidebearings in left-aligned type is pretty straightforward in CS
 
 Depending on the typeface and font size, the value you'll need can differ wildly, so try out several values to see what works best. I've found that they usually fall within the -0.02em to -0.1em range.
 
-<%= codepen '17300c1454dcfc16c02cc3fba9546333', 630 %>
+<%= codepen({ pen: '17300c1454dcfc16c02cc3fba9546333', height: 630 }) %>
 
 And there you have it: the type now looks properly aligned, thanks to a few negative margins.
 
