Change Typekit kit

--- a/source/shared/_footer-scripts.haml
+++ b/source/shared/_footer-scripts.haml
@@ -4,7 +4,7 @@
 :javascript
   (function(d) {
     var config = {
-      kitId: 'eck5bbb',
+      kitId: 'bes0gjd',
       scriptTimeout: 3000,
       async: true
     },
