--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -38,7 +38,7 @@ $b-border: $b-borderWidth $b-borderStyle $c-border
 
 // ----- Typography ----- //
 
-$b-fontFamily: 'minion-pro', 'Athelas', 'Georgia', serif
+$b-fontFamily: 'cronos-pro', 'Open Sans', 'Helvetica Neue', sans-serif
 $b-fontFamily-mono: 'Menlo', 'Monaco', 'Andale Mono', 'Courier', 'Lucida Console', monospace
 $b-fontSize: 18px
 $b-fontSize-b: 24px
