Use Robur font in headings

--- a/source/assets/stylesheets/application.sass
+++ b/source/assets/stylesheets/application.sass
@@ -11,6 +11,7 @@
 
 //= require normalize
 
+@import 'foundation/fonts'
 @import 'foundation/helpers'
 @import 'foundation/config'
 @import 'foundation/base'
