--- a/source/assets/stylesheets/foundation/_base.sass
+++ b/source/assets/stylesheets/foundation/_base.sass
@@ -40,14 +40,15 @@ h1, .h1,
 h2, .h2,
 h3, .h3,
 h4, .h4
-  font-weight: $b-fontWeight-bold
+  font-weight: 700
   line-height: 1.325
   margin-bottom: $b-space
   margin-top: 0
 
 h1, .h1
   +font-size(( b: $b-fontSize-h1, m: $b-fontSize-h1-b, l: $b-fontSize-h1-c ))
-  font-weight: $b-fontWeight-bold
+  font-family: $b-fontFamily-serif
+  font-weight: 400
   letter-spacing: -0.025em
   line-height: 1
   margin-bottom: $b-space-s
