--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -1,7 +1,7 @@
 // *************************************
 //
 //   Config
-//   -> Fonts, Variables
+//   -> Variables
 //
 // *************************************
 
@@ -39,6 +39,7 @@ $b-border: $b-borderWidth $b-borderStyle $c-border
 // ----- Typography ----- //
 
 $b-fontFamily: 'cronos-pro', 'Open Sans', 'Helvetica Neue', sans-serif
+$b-fontFamily-serif: 'Robur Web', 'Georgia', serif
 $b-fontFamily-mono: 'Menlo', 'Monaco', 'Andale Mono', 'Courier', 'Lucida Console', monospace
 $b-fontSize: 18px
 $b-fontSize-b: 24px
