Update to MVCSS v5 Grid module

--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -80,9 +80,9 @@ $g-l: em(1200px)
 
 // Settings
 
-$g-columns: 4
-$g-breakpoints: (s: $g-s, m: $g-m, l: $g-l)
-$g-gutter: rem(20px)
+$g-columns: 5
+$g-defaults: (s: $g-s, m: $g-m, l: $g-l)
+$g-gutter: 40px
 
 // ----- Row ----- //
 
