--- a/source/shared/_header.haml
+++ b/source/shared/_header.haml
@@ -1,12 +1,12 @@
 %header.row{ role: 'banner' }
   .cell.well.well--s.well--m--m
-    .g
-      .g-b.g-b--2of4.g-b--s--3of4
+    .mv-g
+      .mv-g-b.mv-g-b--3of5.mv-g-b--4of5_m
 
         = link_to '/index.html' do
           = image_tag 'johndjameson-logo.svg', class: 'logo'
 
-      .g-b.g-b--1of2.g-b--s--1of4.has-navigationTab
+      .mv-g-b.mv-g-b--2of5.mv-g-b--1of5_m.has-navigationTab
 
         .navigationTab
           = link_to 'About', '/about.html', class: 'navigationTab-link'
