Update meta titles and descriptions

--- a/source/index.haml
+++ b/source/index.haml
@@ -1,5 +1,6 @@
 ---
-description: 'Front-end Developer at Code School'
+description: 'Tutorials on web typography and front-end development.'
+title: 'Web Typography'
 ---
 
 %section.row.mbm--m
