Update base variables

--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -59,8 +59,8 @@ $b-lineHeight-b: 1.375
 
 // ----- Sizing ----- //
 
-$b-maxWidth: rem(730px)
-$b-space: rem(28px)
+$b-maxWidth: 960px
+$b-space: 20px
 $b-space-xs: $b-space * 0.25
 $b-space-s: $b-space * 0.5
 $b-space-l: $b-space * 2
@@ -74,9 +74,9 @@ $b-space-xl: $b-space * 4
 
 // Breakpoints
 
-$g-s: em(480px)
-$g-m: em(640px)
-$g-l: em(1200px)
+$g-s: 480px
+$g-m: 640px
+$g-l: 1200px
 
 // Settings
 
@@ -86,8 +86,8 @@ $g-gutter: 40px
 
 // ----- Row ----- //
 
-$row-gutter: rem(10px)
-$row-gutter-b: rem(20px)
+$row-gutter: 10px
+$row-gutter-b: 20px
 
 // -------------------------------------
 //   Structures
@@ -100,5 +100,5 @@ $link-borderWidth: 2px
 
 // ----- Logo ----- //
 
-$logo-size: rem(50px)
-$logo-size-b: rem(70px)
+$logo-size: 50px
+$logo-size-b: 70px
