--- a/source/assets/stylesheets/foundation/_tools.sass
+++ b/source/assets/stylesheets/foundation/_tools.sass
@@ -188,9 +188,7 @@
 // ----- Size ----- //
 
 .tss
-  +font-size('s')
-.tsl
-  +font-size('l')
+  font-size: 16px
 
 // ----- Style ----- //
 
@@ -199,7 +197,7 @@
 
 // ----- Weight ----- //
 
-.twn
-  font-weight: $b-fontWeight-normal
-.twb
-  font-weight: $b-fontWeight-bold
+.tw4
+  font-weight: 400
+.tw7
+  font-weight: 700
