--- a/source/assets/stylesheets/structures/_lead.sass
+++ b/source/assets/stylesheets/structures/_lead.sass
@@ -12,7 +12,4 @@
 // *************************************
 
 .lead
-  +font-size('l')
-  font-style: italic
-  line-height: 1.325
-  margin-left: -0.05em
+  font-weight: 700
