--- a/source/index.haml
+++ b/source/index.haml
@@ -9,7 +9,7 @@ title: 'Web Typography'
       .mv-g-b.mv-g-b--3of5_m
 
         %h1 The Blog
-        %p.mbl.tsi.tsl Web typography and front-end development
+        %p.mbl.tw7 Web typography and front-end development
 
     %ul.list
       - get_posts().each do |post|
