--- a/source/assets/stylesheets/structures/_navigationTab.sass
+++ b/source/assets/stylesheets/structures/_navigationTab.sass
@@ -18,7 +18,7 @@
   align-items: center
   border-top: $b-border
   display: flex
-  width: 100%
+  flex-grow: 1
 
 // -------------------------------------
 //   Context
@@ -34,5 +34,5 @@
 // ----- Link ----- //
 
 .navigationTab-link
-  +font-size('s')
-  font-weight: $b-fontWeight-bold
+  font-size: 16px
+  font-weight: 700
