--- a/source/shared/_header.haml
+++ b/source/shared/_header.haml
@@ -1,12 +1,17 @@
 %header.row{ role: 'banner' }
-  .cell.well.well--s.well--m--m
-    .mv-g
-      .mv-g-b.mv-g-b--3of5.mv-g-b--4of5_m
+  .cell.mt30px
+    .mv-header
+      .mv-g.aife
+        .mv-g-b.mv-g-b--3of5.mv-g-b--4of5_m
 
-        = link_to '/index.html' do
-          = image_tag 'johndjameson-logo.svg', class: 'logo'
+          .aife.df
+            = link_to '/index.html', class: 'db mrm' do
+              = image_tag 'johndjameson-logo.svg', class: 'db logo'
 
-      .mv-g-b.mv-g-b--2of5.mv-g-b--1of5_m.has-navigationTab
+            %div.dn.db_m
+              %p.mbf.tss.tw7 John D. Jameson
+              %p.mbf.tsi.tss Web typography and front-end development
 
-        .navigationTab
-          = link_to 'About', '/about.html', class: 'navigationTab-link'
+        .mv-g-b.mv-g-b--2of5.mv-g-b--1of5_m
+
+          = link_to 'About', '/about.html', class: 'tss tw7'
