Update article layout

--- a/source/assets/stylesheets/components/_grid.sass
+++ b/source/assets/stylesheets/components/_grid.sass
@@ -31,6 +31,13 @@
 .mv-g--centered
   justify-content: center
 
+// Modifiers
+
++respond-to($g-l)
+
+  .mv-g--centered_l
+    justify-content: center
+
 // -------------------------------------
 //   Scaffolding
 // -------------------------------------
