--- a/source/assets/stylesheets/components/_row.sass
+++ b/source/assets/stylesheets/components/_row.sass
@@ -14,7 +14,7 @@
 
 .row
   overflow: hidden
-  padding: 0 $row-gutter
+  padding: 0 $b-space
 
   +respond-to($g-m)
-    padding: 0 $row-gutter-b
+    padding: 0 $b-space-l
