Update About page layout

--- a/source/about.haml
+++ b/source/about.haml
@@ -5,45 +5,48 @@ title: 'About'
 %section.row.mbm--m
   .cell.well.well--l
 
-    %h1= prevent_widow('Questions & Answers')
+    .mv-g.mv-g--centered_l
+      .mv-g-b.mv-g-b--4of5_m.mv-g-b--3of5_l
 
-    .article
-      :markdown
+        %h1= prevent_widow('Questions & Answers')
 
-        Are you available for hire?
-        ---------------------------
+        .article
+          :markdown
 
-        Nope, I'm keeping busy day to day over at ye olde
-        #{ link_to 'Code School', data.links.codeschool }.
+            Are you available for hire?
+            ---------------------------
 
-        Is it true I can talk to you on Twitter?
-        ----------------------------------------
+            Nope, I'm keeping busy day to day over at ye olde
+            #{ link_to 'Code School', data.links.codeschool }.
 
-        You bet &mdash; I'm #{ link_to '@johndjameson', data.links.twitter }
-        over there. If you have feedback on an article or suggestions for a
-        future topic, Twitter's the best place to start a conversation with me.
+            Is it true I can talk to you on Twitter?
+            ----------------------------------------
 
-        How many Star Wars audiobooks do you own?
-        -----------------------------------------
+            You bet &mdash; I'm #{ link_to '@johndjameson', data.links.twitter }
+            over there. If you have feedback on an article or suggestions for a
+            future topic, Twitter's the best place to start a conversation with me.
 
-        Five so far, and they're all on Sith Lords. It feels strange getting
-        back into Star&nbsp;Wars after the whole prequel fiasco, but listening
-        to the audiobooks has been _a lot_ of fun.
+            How many Star Wars audiobooks do you own?
+            -----------------------------------------
 
-        What do you think of&thinsp;&hellip;
-        ------------------------------------
+            Five so far, and they're all on Sith Lords. It feels strange getting
+            back into Star&nbsp;Wars after the whole prequel fiasco, but listening
+            to the audiobooks has been _a lot_ of fun.
 
-        It depends.
+            What do you think of&thinsp;&hellip;
+            ------------------------------------
 
-        Nobody really asked these questions, did they?
-        ----------------------------------------------
+            It depends.
 
-        Hey, I remember you &mdash; you're the one who spoiled Santa Claus for
-        Marielle Molina in the 2nd grade!
+            Nobody really asked these questions, did they?
+            ----------------------------------------------
 
-        Anything else I should know about you?
-        --------------------------------------
+            Hey, I remember you &mdash; you're the one who spoiled Santa Claus for
+            Marielle Molina in the 2nd grade!
 
-        I bought a lenticular poster of a bald eagle to hang on my bedroom
-        wall. It is, without a doubt, the _coolest thing_ I have ever owned.
-        Shout-out to kitschy museum gift shops.
+            Anything else I should know about you?
+            --------------------------------------
+
+            I bought a lenticular poster of a bald eagle to hang on my bedroom
+            wall. It is, without a doubt, the _coolest thing_ I have ever owned.
+            Shout-out to kitschy museum gift shops.
