--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -36,12 +36,36 @@ $b-borderStyle: solid
 $b-borderWidth: 3px
 $b-border: $b-borderWidth $b-borderStyle $c-border
 
-// ----- Typography ----- //
+// -------------------------------------
+//   Typography
+// -------------------------------------
 
-$b-fontFamily: 'cronos-pro', 'Open Sans', 'Helvetica Neue', sans-serif
+// ----- Family ----- //
+
+$b-fontFamily: 'cronos-pro', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif
+$b-fontFamily-fallback: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif
 $b-fontFamily-serif: 'Robur Web', 'Georgia', serif
-$b-fontFamily-mono: 'Menlo', 'Monaco', 'Andale Mono', 'Courier', 'Lucida Console', monospace
+$b-fontFamily-mono: 'Courier', monospace
+
+// ----- Line Height ----- //
+
 $b-lineHeight: 1.333
+
+// ----- Size ----- //
+
+$b-fontSize: 21px
+$b-fontSize-fallback: 18px
+
+$b-fontSize-s: 16px
+$b-fontSize-s-fallback: 14px
+
+$b-fontSize-s: 16px
+$b-fontSize-s-fallback: 14px
+
+// Headings
+
+$b-fontSize-h2: 26px
+$b-fontSize-h2-fallback: 20px
 
 // ----- Sizing ----- //
 
