--- a/source/assets/stylesheets/foundation/_tools.sass
+++ b/source/assets/stylesheets/foundation/_tools.sass
@@ -209,7 +209,10 @@
 // ----- Size ----- //
 
 .tss
-  font-size: 16px
+  font-size: $b-fontSize-s
+
+  +fontless
+    font-size: $b-fontSize-s-fallback
 
 // ----- Style ----- //
 
